docker push added in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,5 @@ build_and_push_to_docker_hub:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: schizgod/infra_actions:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest
 
