--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,17 @@ jobs:
           cd infra_project/
           python manage.py test
 
+  build:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      # Деплой приложения на удалённый сервер
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - ...
+
 build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
